group = 'com.nablarch.framework'
version = '1.3.0'
description = 'FW自体の基盤(ハンドラなど)およびコア機能(ログ、リポジトリなど）'

buildscript {
  repositories {
    mavenLocal()
    maven { url "${developLibUrl}" }
    jcenter()
  }
  dependencies {
    classpath "com.nablarch.dev:nablarch-gradle-plugin:${nablarchGradlePluginVersion}"
    classpath "net.saliman:gradle-cobertura-plugin:${coberturaPluginVersion}"
  }
}

apply plugin: 'com.nablarch.dev.nablarch-build'
apply plugin: 'com.nablarch.dev.nablarch-maven-deploy'
apply plugin: 'com.nablarch.dev.nablarch-sonarqube'
apply plugin: 'com.nablarch.dev.nablarch-version'
apply from: 'https://github.com/nablarch/nablarch-gradle-plugin/blob/develop/scripts/cobertura/cobertura-0.0.1.gradle?raw=true'

// ビルド時のJavaバージョンを指定する
sourceCompatibility = JavaVersion.VERSION_1_6
targetCompatibility = JavaVersion.VERSION_1_6

configurations {
  all*.exclude module: 'nablarch-test-support'
  all*.exclude module: 'h2'
  jmockit
}

dependencies {
  jmockit 'org.jmockit:jmockit:1.21'
  testCompile configurations.jmockit.dependencies
  testCompile 'junit:junit:4.12'
  testCompile 'org.hamcrest:hamcrest-all:1.3'

  testRuntime('com.nablarch.integration:nablarch-slf4j-adaptor:1.0.0') {
    exclude module: 'nablarch-core'
  }
  testRuntime 'org.slf4j:slf4j-simple:1.7.24'
}

test {
  jvmArgs(
      '-Xms16m',
      '-Xmx32m',
      '-XX:PermSize=32m',
      '-XX:+UseParallelGC',
      '-Dfile.encoding=UTF-8',
      '-XX:-UseSplitVerifier',
  )

  cobertura {
    coberturaVersion = '1.9.4.1'
    coverageSourceDirs = ["${projectDir}/src/main/java/"]
    coverageFormats = ['xml']
    coverageDirs = [project.sourceSets.main.output.classesDir]
    auxiliaryClasspath = files('src/main/resources') + configurations.testRuntime.asFileTree
  }
}

tasks.sonarRunner {
  dependsOn = ['coverage']
}

task wrapper(type: Wrapper) {
  gradleVersion = '2.13'
}

sourcesJar {
  into('') {
    from 'README.txt'
  }
}
